--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:url" content="{{url()->current()}}">
+	<meta property="og:url" content="team.techfest.org">
 	<meta property="og:description" content="This is probably the question you’re most curious to know the answer to! Techfest provides you with opportunities and skills that play an essential role in the development of your personality. From managing organizers to handling events, Techfest equips you with valuable skills such as communication, management, pressure handling and time management. All in all, if you’re looking for opportunities to create memories and build relationships, come join us. Be a part of the Techfest family.">
 		<meta property="og:title" content="Coordinator Portal | Techfest">
 		<meta property="og:site_name" content="Coordinator Portal | Techfest">
-		<meta property="og:image" content="assets/logo.png">
+		<meta property="og:image" content="assets/thumbnail.png">
 		<meta property="og:see_also" content="http://m.techfest.org">
 		<meta name="description" content="This is probably the question you’re most curious to know the answer to! Techfest provides you with opportunities and skills that play an essential role in the development of your personality. From managing organizers to handling events, Techfest equips you with valuable skills such as communication, management, pressure handling and time management. All in all, if you’re looking for opportunities to create memories and build relationships, come join us. Be a part of the Techfest family.">
 		<meta name="keywords" content="Techfest, Enigma, IIT Bombay, CryptHunt">
