--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:url" content="team.techfest.org">
-	<meta property="og:description" content="This is probably the question you’re most curious to know the answer to! Techfest provides you with opportunities and skills that play an essential role in the development of your personality. From managing organizers to handling events, Techfest equips you with valuable skills such as communication, management, pressure handling and time management. All in all, if you’re looking for opportunities to create memories and build relationships, come join us. Be a part of the Techfest family.">
-		<meta property="og:title" content="Coordinator Portal | Techfest">
-		<meta property="og:site_name" content="Coordinator Portal | Techfest">
-		<meta property="og:image" content="assets/thumbnail.png">
-		<meta property="og:see_also" content="http://m.techfest.org">
-		<meta name="description" content="This is probably the question you’re most curious to know the answer to! Techfest provides you with opportunities and skills that play an essential role in the development of your personality. From managing organizers to handling events, Techfest equips you with valuable skills such as communication, management, pressure handling and time management. All in all, if you’re looking for opportunities to create memories and build relationships, come join us. Be a part of the Techfest family.">
-		<meta name="keywords" content="Techfest, Enigma, IIT Bombay, CryptHunt">
-		<meta name="author" content="Techfest Web Manager">
-		<meta name="keywords" content="techfest 2020, techfest events, event organiser, event coordinator, registration portal, job, student job, college job, techfest, techfest iit bombay, techfest bombay, IIT Bombay, college, opportunity, resume, skill development,  Asia's largest science and technology festival, science, technology, techfest 2019-2020, techfest 2020-21">
+	<meta property="og:url" content="http://cp-ang-v1.s3-website-us-east-1.amazonaws.com/">
+  <meta property="og:title" content="Coordinator Portal | Techfest">
+  <meta property="og:site_name" content="Coordinator Portal | Techfest">
+  <meta property="og:image" content="http://cp-tf-v1.s3-website-us-east-1.amazonaws.com/assets/thumbnail.jpg">
+  <meta property="og:image:alt" content="Techfest, IIT Bombay" />
+  <meta property="og:type" content="website" />
+  <meta property="og:see_also" content="http://m.techfest.org">
+  <meta property="og:description" content="'Techfest is what the team wants.' This one line has been passed down through each and every team ever since the conception of Techfest in 1998. In these unprecedented times, Team Techfest is on the lookout for highly charged individuals with new perspectives, new ideas and a whole lot of enthusiasm! So come, join Team Techfest, and gain insights to how things work behind the scenes of one of the largest festivals in the World, all while having fun and learning new skills!">
+  <meta name="author" content="Techfest Web Manager">
+  <meta name="keywords" content="techfest 2020, techfest events, event organiser, event coordinator, registration portal, job, student job, college job, techfest, techfest iit bombay, techfest bombay, IIT Bombay, college, opportunity, resume, skill development,  Asia's largest science and technology festival, science, technology, techfest 2019-2020, techfest 2020-21">
+
 
   <title>Coordinator Portal | Techfest</title>
   <base href="/">
